<resources>
    <string name="app_name">Pocket Pixel Pet</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="choose_your_pet">Choose Your Pet</string>
    <string name="choose_a_background">Choose a Background</string>
    <string name="choose_your_pets_color">Choose Your Pet\'s Color</string>
    <string name="pick_a_color">Pick a Color</string>
    <string name="choose_a_personality">Choose a personality</string>
    <string name="this_will_change_how_your_pet_behaves">This will change how your pet behaves!</string>
    <string name="pocket_pixel_pet">Pocket Pixel Pet</string>
    <string name="cheerful">Cheerful</string>
    <string name="stays_happy_for_longer">Stays happy for longer</string>
    <string name="lazy">Lazy</string>
    <string name="gets_hungry_more_slowly">Gets hungry more slowly.</string>
    <string name="playful">Playful</string>
    <string name="playing_boosts_happiness_more">Playing boosts happiness more.</string>
    <string name="happiness">Happiness</string>
    <string name="hunger">Hunger</string>
    <string name="hygiene">Hygiene</string>
    <string name="bathe">🧼</string>
    <string name="your_pet_is_feeling_great">Your pet is feeling great!</string>
    <string name="pink">Pink</string>
    <string name="blue">Blue</string>
    <string name="mint">Mint</string>
    <string name="purple">Purple</string>
    <string name="you_can_t_change_this_later_so_choose_carefully">You can\'t change this later, so choose carefully!</string>
    <string name="enter_pet_name">Enter pet name...</string>
    <string name="pet_name">Pet name</string>
    <string name="give_your_new_friend_a_special_name">Give your new friend a special name!</string>
    <string name="name_your_pet">Name Your Pet</string>
    <string name="admin_page_manage_users">Admin Page - Manage Users</string>
    <string name="squiggles">Squiggles</string>
    <string name="delete">Delete</string>
    <string name="last_three_actions">Last Three Actions:</string>
    <string name="first_action">First Action</string>
    <string name="second_action">Second Action</string>
    <string name="third_action">Third Action</string>
    <string name="color_of_pet">Color of pet</string>
</resources>