<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#CDEFE3"
            android:padding="12dp">

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/nokiafc22"
                android:text="@string/username"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/lastThreeActionsTextView"
                app:layout_constraintEnd_toStartOf="@+id/petColorImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/petNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/nokiafc22"
                android:text="@string/squiggles"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/lastThreeActionsTextView"
                app:layout_constraintEnd_toStartOf="@+id/petColorImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userNameTextView" />

            <ImageView
                android:id="@+id/petColorImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/color_of_pet"
                app:layout_constraintBottom_toTopOf="@+id/lastThreeActionsTextView"
                app:layout_constraintEnd_toStartOf="@+id/deleteUserButton"
                app:srcCompat="@drawable/button_circle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:backgroundTint="#F9B8D0"
                android:fontFamily="@font/nokiafc22"
                android:text="@string/delete"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@id/userNameTextView"
                app:layout_constraintBottom_toTopOf="@+id/lastThreeActionsTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:strokeColor="#6CA893"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/lastThreeActionsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_three_actions"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/firstNewestActionTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userNameTextView" />

            <TextView
                android:id="@+id/firstNewestActionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_action"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/secondNewestActionTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastThreeActionsTextView" />

            <TextView
                android:id="@+id/secondNewestActionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_action"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/thirdNewestActionTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstNewestActionTextView" />

            <TextView
                android:id="@+id/thirdNewestActionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_action"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/secondNewestActionTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>