<?xml version="1.0" encoding="utf-8"?>

<!-- Author: Jessica Sandoval -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9FFF6">


    <!-- Title -->
    <TextView
        android:id="@+id/choosePersonalityTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/choose_a_personality"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/personalitySubtitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/this_will_change_how_your_pet_behaves"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choosePersonalityTextView" />

    <!-- Cheerful card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cheerfulButton"
        android:layout_width="154dp"
        android:layout_height="125dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personalitySubtitleTextView"
        app:strokeColor="#9BC7B5"
        app:strokeWidth="3dp">

        <!-- Content inside the Cheerful card -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/cheerfulTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cheerful"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cheerfulSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dp"
                android:text="@string/stays_happy_for_longer"
                android:textSize="14sp" />
        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>